--- a/views/components/view-transaksi.html
+++ b/views/components/view-transaksi.html
@@ -40,7 +40,7 @@
             <table class="table" ng-hide="$ctrl.step_one == true">
               <tbody>
                 <tr>
-                  <th>Daftar Biaya</th>
+                  <th>Detail Biaya</th>
                   <td ng-hide="$ctrl.showUpdateCostForm == true"><a ng-click="$ctrl.updateCost()" ng-if="$ctrl.canEdit()" class="btn btn-default btn-xs pull-right"><i class="fa fa-edit"></i> Ubah</a></td>
                   <td ng-if="$ctrl.showUpdateCostForm == true"><a ng-click="$ctrl.back()" class="btn btn-danger btn-xs pull-right"><i class="fa fa-arrow-left"></i> Kembali</a></td>
                 </tr>
