--- a/views/components/header.html
+++ b/views/components/header.html
@@ -3,7 +3,7 @@
 	<!-- mini logo for sidebar mini 50x50 pixels -->
 	<span class="logo-mini"><b>HO</b></span>
 	<!-- logo for regular state and mobile devices -->
-	<span class="logo-lg">Tracking <b>HO</b></span>
+	<span class="logo-lg">Trucking <b>HO</b></span>
 </a>
 
 <!-- Header Navbar -->
