--- a/views/components/dashboard.html
+++ b/views/components/dashboard.html
@@ -39,4 +39,25 @@
 			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-lg-6 col-xs-12">
+			<div class="box box-info">
+				<div class="box-header with-border">
+					<h3 class="box-title">Ritasi Kendaraan ({{$ctrl.$rootScope.date|date:'MMMM yyyy'}})</h3>
+				</div>
+				<div class="box-body">
+					<table class="table table-bordered">
+						<tr>
+							<th>No. Polisi</th>
+							<th>Ritasi</th>
+						</tr>
+						<tr ng-repeat="(key, value) in $ctrl.data.car_stat">
+							<td>{{key}}</td>
+							<td>{{value}}</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
