--- a/views/components/transaksi.main.html
+++ b/views/components/transaksi.main.html
@@ -18,12 +18,12 @@
           <div class="box-body">
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('driver')}">
               <label>Sopir<small class="text-red">*</small></label>
-              <oi-select oi-options="item.name for item in $ctrl.list.driver" ng-model="$ctrl.param.driver" placeholder="Pilih Nomor Polisi" required></oi-select>
+              <oi-select oi-options="item.name for item in $ctrl.list.driver | filter:{flag_active:true}" ng-model="$ctrl.param.driver" placeholder="Pilih Nomor Polisi" required></oi-select>
               <span ng-if="$ctrl.hasError('driver')" class="help-block">{{$ctrl.error['driver']}}</span>
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('police_number')}">
               <label>No Polisi<small class="text-red">*</small></label>
-              <oi-select oi-options="item.police_number for item in $ctrl.list.vehicle" ng-model="$ctrl.param.police_number" placeholder="Pilih Nomor Polisi" required></oi-select>
+              <oi-select oi-options="item.police_number for item in $ctrl.list.vehicle | filter:{flag_active:true}" ng-model="$ctrl.param.police_number" placeholder="Pilih Nomor Polisi" required></oi-select>
               <span ng-if="$ctrl.hasError('police_number')" class="help-block">{{$ctrl.error['police_number']}}</span>
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('container_size')}">
@@ -33,7 +33,7 @@
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('customer')}">
               <label>Kustomer<small class="text-red">*</small></label>
-              <oi-select oi-options="item.name for item in $ctrl.list.customer" ng-model="$ctrl.param.customer" placeholder="Pilih Kustomer" required></oi-select>
+              <oi-select oi-options="item.name for item in $ctrl.list.customer | filter:{flag_active:true}" ng-model="$ctrl.param.customer" placeholder="Pilih Kustomer" required></oi-select>
               <span ng-if="$ctrl.hasError('customer')" class="help-block">{{$ctrl.error['customer']}}</span>
             </div>
           </div>
@@ -58,7 +58,7 @@
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('route')}">
               <label>Rute<small class="text-red">*</small></label>
               <input ng-show="$ctrl.step_two == true" type="text" autocomplete="off" data-lpignore="true" class="form-control readonly" ng-model="$ctrl.param.route.name" readonly>
-              <oi-select ng-hide="$ctrl.step_two == true" id="route" oi-options="item.name for item in $ctrl.list.route" oi-select-options="{newItem: true, newItemModel: {id: null, name: $query}}" ng-model="$ctrl.param.route" ng-change="$ctrl.param.cost = $ctrl.param.route.additional_data.cost; $ctrl.param.commission = $ctrl.param.route.additional_data.commission" placeholder="Masukan Rute" required></oi-select>
+              <oi-select ng-hide="$ctrl.step_two == true" id="route" oi-options="item.name for item in $ctrl.list.route | filter:{flag_active:true}" oi-select-options="{newItem: true, newItemModel: {id: null, name: $query}}" ng-model="$ctrl.param.route" ng-change="$ctrl.param.cost = $ctrl.param.route.additional_data.cost; $ctrl.param.commission = $ctrl.param.route.additional_data.commission" placeholder="Masukan Rute" required></oi-select>
               <span ng-if="$ctrl.hasError('route')" class="help-block">{{$ctrl.error['route']}}</span>
             </div>
             <table class="table table-striped">
