--- a/views/components/transaksi.main.html
+++ b/views/components/transaksi.main.html
@@ -18,8 +18,13 @@
           <div class="box-body">
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('driver')}">
               <label>Sopir<small class="text-red">*</small></label>
-              <oi-select oi-options="item.name for item in $ctrl.list.driver | filter:{flag_active:true}" ng-model="$ctrl.param.driver" placeholder="Pilih Nomor Polisi" required></oi-select>
+              <oi-select oi-options="item.name for item in $ctrl.list.driver | filter:{flag_active:true}" ng-model="$ctrl.param.driver" placeholder="Pilih Sopir" required></oi-select>
               <span ng-if="$ctrl.hasError('driver')" class="help-block">{{$ctrl.error['driver']}}</span>
+            </div>
+            <div class="form-group" ng-class="{'has-error': $ctrl.hasError('kenek')}">
+              <label>Kenek</label>
+              <oi-select oi-options="item.name for item in $ctrl.list.kenek | filter:{flag_active:true}" ng-model="$ctrl.param.kenek" placeholder="Pilih Kenek" required></oi-select>
+              <span ng-if="$ctrl.hasError('kenek')" class="help-block">{{$ctrl.error['driver']}}</span>
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('police_number')}">
               <label>No Polisi<small class="text-red">*</small></label>
@@ -58,18 +63,28 @@
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('route')}">
               <label>Rute<small class="text-red">*</small></label>
               <input ng-show="$ctrl.step_two == true" type="text" autocomplete="off" data-lpignore="true" class="form-control readonly" ng-model="$ctrl.param.route.name" readonly>
-              <oi-select ng-hide="$ctrl.step_two == true" id="route" oi-options="item.name for item in $ctrl.list.route | filter:{flag_active:true}" oi-select-options="{newItem: true, newItemModel: {id: null, name: $query}}" ng-model="$ctrl.param.route" ng-change="$ctrl.param.cost = $ctrl.param.route.additional_data.cost; $ctrl.param.commission = $ctrl.param.route.additional_data.commission" placeholder="Masukan Rute" required></oi-select>
+              <oi-select ng-hide="$ctrl.step_two == true" id="route" oi-options="item.name for item in $ctrl.list.route | filter:{flag_active:true}" oi-select-options="{newItem: true, newItemModel: {id: null, name: $query}}" ng-model="$ctrl.param.route" ng-change="$ctrl.param.cost = $ctrl.param.route.additional_data.cost; $ctrl.param.commission = $ctrl.param.route.additional_data.commission; $ctrl.param.commission2 = $ctrl.param.route.additional_data.commission2" placeholder="Masukan Rute" required></oi-select>
               <span ng-if="$ctrl.hasError('route')" class="help-block">{{$ctrl.error['route']}}</span>
             </div>
             <table class="table table-striped">
               <tbody>
                 <tr>
                   <td>
-                    <input type="text" class="form-control readonly" readonly value="Komisi">
+                    <input type="text" class="form-control readonly" readonly value="Komisi Supir">
                   </td>
                   <td>
                     <div class="form-group" ng-readonly="true">
                       <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right readonly" ng-input-currency ng-model="$ctrl.param.commission" ng-readonly="true">
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <input type="text" class="form-control readonly" readonly value="Komisi Kenek">
+                  </td>
+                  <td>
+                    <div class="form-group" ng-readonly="true">
+                      <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right readonly" ng-input-currency ng-model="$ctrl.param.commission2" ng-readonly="true">
                     </div>
                   </td>
                 </tr>
