hide kenek commission if kenek not selected

--- a/views/components/transaksi.main.html
+++ b/views/components/transaksi.main.html
@@ -78,7 +78,7 @@
                     </div>
                   </td>
                 </tr>
-                <tr>
+                <tr ng-if="$ctrl.param.kenek != null">
                   <td>
                     <input type="text" class="form-control readonly" readonly value="Komisi Kenek">
                   </td>
