--- a/views/components/view-transaksi.html
+++ b/views/components/view-transaksi.html
@@ -22,7 +22,14 @@
             <table class="table">
               <tbody>
                 <tr><th>Supir</th> <td>{{$ctrl.data.driver_name}}</td></tr>
-                <tr><th>Kenek</th> <td>{{$ctrl.data.kenek_name}}</td></tr>
+                <tr ng-hide="$ctrl.showUpdateKenekForm == true"><th>Kenek</th> <td><span ng-bind-html="$ctrl.data.kenek_name || $ctrl.defaultIfEmpty"></span> <a ng-click="$ctrl.updateKenek()" ng-if="$ctrl.canEdit()" class="btn btn-default btn-xs pull-right"><i class="fa fa-edit"></i> Ubah</a></td></tr>
+                <tr ng-hide="$ctrl.showUpdateKenekForm == false">
+                    <th>Kenek</th>
+                    <td>
+                        <oi-select oi-options="item.name for item in $ctrl.list.kenek | filter:{flag_active:true}" ng-model="$ctrl.param.kenek" placeholder="Pilih Kenek" required></oi-select>
+                        <a ng-click="$ctrl.updateKenek()" class="btn btn-success btn-xs pull-right"><i class="fa fa-save"></i> Simpan</a>
+                    </td>
+                </tr>
                 <tr><th>Nomor Polisi</th> <td>{{$ctrl.data.police_number}}</td></tr>
                 <tr><th>Kostumer</th> <td>{{$ctrl.data.customer_name || '-'}}</td></tr>
                 <tr><th>Rute</th> <td>{{$ctrl.data.route}}</td></tr>
