Add solar cost field

--- a/views/components/list-transaksi.html
+++ b/views/components/list-transaksi.html
@@ -75,7 +75,7 @@
                   <th>Rute</th>
                   <th>Komisi Supir</th>
                   <th>Komisi Kenek</th>
-                  <th>Uang Jalan</th>
+                  <th>Total Uang Jalan</th>
                   <th style="width: 35px">&nbsp;</th>
                 </tr>
                 </thead>
