--- a/views/components/transaksi.main.html
+++ b/views/components/transaksi.main.html
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('police_number')}">
               <label>No Polisi<small class="text-red">*</small></label>
-              <oi-select oi-options="item.police_number for item in $ctrl.list.vehicle | filter:{flag_active:true}" ng-model="$ctrl.param.police_number" placeholder="Pilih Nomor Polisi" required></oi-select>
+              <oi-select oi-options="item.police_number for item in $ctrl.list.vehicle | filter:{flag_active:true}" ng-model="$ctrl.param.police_number" ng-change="$ctrl.isUseSolar()" placeholder="Pilih Nomor Polisi" required></oi-select>
               <span ng-if="$ctrl.hasError('police_number')" class="help-block">{{$ctrl.error['police_number']}}</span>
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('container_size')}">
@@ -95,6 +95,16 @@
                   <td>
                     <div class="form-group" ng-readonly="true">
                       <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right readonly" ng-input-currency ng-model="$ctrl.param.cost" ng-readonly="true">
+                    </div>
+                  </td>
+                </tr>
+                <tr ng-if="$ctrl.use_solar">
+                  <td>
+                    <input type="text" class="form-control readonly" readonly value="Tambahan Solar">
+                  </td>
+                  <td>
+                    <div class="form-group" ng-readonly="true">
+                      <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right readonly" ng-input-currency ng-model="$ctrl.param.solar_cost" ng-readonly="true">
                     </div>
                   </td>
                 </tr>
