--- a/views/components/master.route.html
+++ b/views/components/master.route.html
@@ -27,6 +27,7 @@
               <th>Uang Jalan</th>
               <th>Komisi Supir</th>
               <th>Komisi Kenek</th>
+              <th>Tambahan Solar</th>
               <th style="width: 70px">Status</th>
               <th style="width: 105px">&nbsp;</th>
             </tr>
@@ -37,6 +38,7 @@
                 <td class="text-right">{{item.additional_data.cost|currency:""}}</td>
                 <td class="text-right">{{item.additional_data.commission|currency:""}}</td>
                 <td class="text-right">{{item.additional_data.commission2|currency:""}}</td>
+                <td class="text-right">{{item.additional_data.solar_cost|currency:""}}</td>
                 <td><span class="label" ng-class="item.flag_active ? 'label-success' : 'label-default'">{{item.flag_active ? "Aktif" : "Non Aktif"}}</span></td>
                 <td>
                   <a ng-click="$ctrl.toggleRecord(item)" class="btn btn-xs btn-default"><i class="fa" ng-class="item.flag_active ? 'fa-eye' : 'fa-eye-slash'"></i></a>
@@ -76,6 +78,11 @@
               <label>Komisi Kenek</label>
               <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right" ng-input-currency ng-model="$ctrl.param.additional_data.commission2">
               <span ng-if="$ctrl.hasError('commission2')" class="help-block">{{$ctrl.error['commission2']}}</span>
+            </div>
+            <div class="form-group" ng-class="{'has-error': $ctrl.hasError('solar_cost')}">
+              <label>Tambahan Solar</label>
+              <input type="text" autocomplete="off" data-lpignore="true" class="form-control text-right" ng-input-currency ng-model="$ctrl.param.additional_data.solar_cost">
+              <span ng-if="$ctrl.hasError('solar_cost')" class="help-block">{{$ctrl.error['solar_cost']}}</span>
             </div>
             <div class="form-group">
               <a class="btn btn-success" ng-click="$ctrl.submitForm()">Simpan</a>
