--- a/views/components/master.vehicle.html
+++ b/views/components/master.vehicle.html
@@ -21,7 +21,7 @@
             <thead>
             <tr>
               <th>Nomor Polisi</th>
-              <th>Biaya Tambahan Solar</th>
+              <th>Tambahan Solar</th>
               <th style="width: 70px">Status</th>
               <th style="width: 105px">&nbsp;</th>
             </tr>
@@ -29,7 +29,7 @@
             <tbody>
               <tr ng-repeat="item in $ctrl.data">
                 <td>{{item.police_number}}</td>
-                <td class="text-right">{{item.additional_data.solar_cost|currency:""}}</td>
+                <td><span class="label" ng-class="item.additional_data.use_solar ? 'label-success' : 'label-default'">{{item.additional_data.use_solar ? "Ya" : "Tidak"}}</span></td>
                 <td><span class="label" ng-class="item.flag_active ? 'label-success' : 'label-default'">{{item.flag_active ? "Aktif" : "Non Aktif"}}</span></td>
                 <td>
                   <a ng-click="$ctrl.toggleRecord(item)" class="btn btn-xs btn-default"><i class="fa" ng-class="item.flag_active ? 'fa-eye' : 'fa-eye-slash'"></i></a>
@@ -57,8 +57,7 @@
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('solar_cost')}">
               <label>Tambah Biaya Solar?</label>
-              <input type="checkbox" ng-model="$ctrl.param.use_solar">
-              <input ng-if="$ctrl.param.use_solar" type="text" autocomplete="off" data-lpignore="true" class="form-control text-right" ng-input-currency ng-model="$ctrl.param.additional_data.solar_cost">
+              <input type="checkbox" ng-model="$ctrl.param.additional_data.use_solar">
             </div>
             <div class="form-group">
               <a class="btn btn-success" ng-click="$ctrl.submitForm()">Simpan</a>
