--- a/views/components/transaksi.main.html
+++ b/views/components/transaksi.main.html
@@ -28,7 +28,7 @@
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('police_number')}">
               <label>No Polisi<small class="text-red">*</small></label>
-              <oi-select oi-options="item.police_number for item in $ctrl.list.vehicle | filter:{flag_active:true}" ng-model="$ctrl.param.police_number" ng-change="$ctrl.isUseSolar()" placeholder="Pilih Nomor Polisi" required></oi-select>
+              <oi-select oi-options="item.police_number for item in $ctrl.list.vehicle | filter:{flag_active:true}" ng-model="$ctrl.param.police_number" placeholder="Pilih Nomor Polisi" required></oi-select>
               <span ng-if="$ctrl.hasError('police_number')" class="help-block">{{$ctrl.error['police_number']}}</span>
             </div>
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('container_size')}">
@@ -63,7 +63,7 @@
             <div class="form-group" ng-class="{'has-error': $ctrl.hasError('route')}">
               <label>Rute<small class="text-red">*</small></label>
               <input ng-show="$ctrl.step_two == true" type="text" autocomplete="off" data-lpignore="true" class="form-control readonly" ng-model="$ctrl.param.route.name" readonly>
-              <oi-select ng-hide="$ctrl.step_two == true" id="route" oi-options="item.name for item in $ctrl.list.route | filter:{flag_active:true}" oi-select-options="{newItem: true, newItemModel: {id: null, name: $query}}" ng-model="$ctrl.param.route" ng-change="$ctrl.param.cost = $ctrl.param.route.additional_data.cost; $ctrl.param.commission = $ctrl.param.route.additional_data.commission; $ctrl.param.commission2 = $ctrl.param.route.additional_data.commission2" placeholder="Masukan Rute" required></oi-select>
+              <oi-select ng-hide="$ctrl.step_two == true" id="route" oi-options="item.name for item in $ctrl.list.route | filter:{flag_active:true}" oi-select-options="{newItem: true, newItemModel: {id: null, name: $query}}" ng-model="$ctrl.param.route" ng-change="$ctrl.param.cost = $ctrl.param.route.additional_data.cost; $ctrl.param.commission = $ctrl.param.route.additional_data.commission; $ctrl.param.commission2 = $ctrl.param.route.additional_data.commission2; $ctrl.isUseSolar()" placeholder="Masukan Rute" required></oi-select>
               <span ng-if="$ctrl.hasError('route')" class="help-block">{{$ctrl.error['route']}}</span>
             </div>
             <table class="table table-striped">
