--- a/views/components/monitor.html
+++ b/views/components/monitor.html
@@ -43,7 +43,7 @@
 				</div>
 				<div class="col-lg-4 col-xs-12">
 					<table class="table table-bordered">
-						<tr ng-repeat="item in $ctrl.data.items.one">
+						<tr ng-repeat="item in $ctrl.data.items.two">
 							<td>{{$index+1}}</td>
 							<td>{{item.police_number}}</td>
 							<td>{{item.driver_name}}</td>
@@ -56,7 +56,7 @@
 				</div>
 				<div class="col-lg-4 col-xs-12">
 					<table class="table table-bordered">
-						<tr ng-repeat="item in $ctrl.data.items.one">
+						<tr ng-repeat="item in $ctrl.data.items.three">
 							<td>{{$index+1}}</td>
 							<td>{{item.police_number}}</td>
 							<td>{{item.driver_name}}</td>
