--- a/views/components/monitor.html
+++ b/views/components/monitor.html
@@ -34,7 +34,7 @@
 							<td>{{$index+1}}</td>
 							<td>{{item.police_number}}</td>
 							<td>{{item.driver_name}}</td>
-							<td>{{item.customer_name}}</td>
+							<td>{{item.customer_name|limitTo:15}}{{item.customer_name.length > 15 ? '...' : ''}}</td>
 							<td>{{item.transaction_time}}</td>
 							<td>{{item.ritasi}}</td>
 							<td> </td>
@@ -47,7 +47,7 @@
 							<td>{{$index+1}}</td>
 							<td>{{item.police_number}}</td>
 							<td>{{item.driver_name}}</td>
-							<td>{{item.customer_name}}</td>
+							<td>{{item.customer_name|limitTo:15}}{{item.customer_name.length > 15 ? '...' : ''}}</td>
 							<td>{{item.transaction_time}}</td>
 							<td>{{item.ritasi}}</td>
 							<td> </td>
@@ -60,7 +60,7 @@
 							<td>{{$index+1}}</td>
 							<td>{{item.police_number}}</td>
 							<td>{{item.driver_name}}</td>
-							<td>{{item.customer_name}}</td>
+							<td>{{item.customer_name|limitTo:15}}{{item.customer_name.length > 15 ? '...' : ''}}</td>
 							<td>{{item.transaction_time}}</td>
 							<td>{{item.ritasi}}</td>
 							<td> </td>
