--- a/views/components/monitor.html
+++ b/views/components/monitor.html
@@ -41,7 +41,7 @@
 							</td>
 						</tr>
 						<tr ng-if="$ctrl.data.items.one.length == 0">
-							<td colspan="7">Tidak ada data</td>
+							<td colspan="7" class="text-center">Tidak ada data</td>
 						</tr>
 					</table>
 				</div>
@@ -60,7 +60,7 @@
 							</td>
 						</tr>
 						<tr ng-if="$ctrl.data.items.one.length == 0">
-							<td colspan="7">Tidak ada data</td>
+							<td colspan="7" class="text-center">Tidak ada data</td>
 						</tr>
 					</table>
 				</div>
@@ -79,7 +79,7 @@
 							</td>
 						</tr>
 						<tr ng-if="$ctrl.data.items.one.length == 0">
-							<td colspan="7">Tidak ada data</td>
+							<td colspan="7" class="text-center">Tidak ada data</td>
 						</tr>
 					</table>
 				</div>
