--- a/views/components/monitor.html
+++ b/views/components/monitor.html
@@ -59,7 +59,7 @@
 								<i ng-if="item.status == 'ARRIVED' || item.status == 'CLOSED'" class="fa fa-check text-green"></i>
 							</td>
 						</tr>
-						<tr ng-if="$ctrl.data.items.one.length == 0">
+						<tr ng-if="$ctrl.data.items.two.length == 0">
 							<td colspan="7" class="text-center">Tidak ada data</td>
 						</tr>
 					</table>
@@ -78,7 +78,7 @@
 								<i ng-if="item.status == 'ARRIVED' || item.status == 'CLOSED'" class="fa fa-check text-green"></i>
 							</td>
 						</tr>
-						<tr ng-if="$ctrl.data.items.one.length == 0">
+						<tr ng-if="$ctrl.data.items.three.length == 0">
 							<td colspan="7" class="text-center">Tidak ada data</td>
 						</tr>
 					</table>
