--- a/views/components/monitor.html
+++ b/views/components/monitor.html
@@ -33,8 +33,8 @@
 							<td>{{item.police_number}}</td>
 							<td>{{item.driver_name}}</td>
 							<td>{{item.customer_name}}</td>
-							<td>{{item.transaction_time}}</td>
-							<td>{{item.ritasi}}</td>
+							<td class="text-center">{{item.transaction_time}}</td>
+							<td class="text-center">{{item.ritasi}}</td>
 							<td>
 								<i ng-if="item.status == 'OPEN'" style="cursor: pointer" class="fa fa-check" ng-click="$ctrl.markAsArrived(item)"></i>
 							</td>
@@ -51,8 +51,8 @@
 							<td>{{item.police_number}}</td>
 							<td>{{item.driver_name}}</td>
 							<td>{{item.customer_name}}</td>
-							<td>{{item.transaction_time}}</td>
-							<td>{{item.ritasi}}</td>
+							<td class="text-center">{{item.transaction_time}}</td>
+							<td class="text-center">{{item.ritasi}}</td>
 							<td>
 								<i ng-if="item.status == 'OPEN'" style="cursor: pointer" class="fa fa-check" ng-click="$ctrl.markAsArrived(item)"></i>
 							</td>
@@ -69,8 +69,8 @@
 							<td>{{item.police_number}}</td>
 							<td>{{item.driver_name}}</td>
 							<td>{{item.customer_name}}</td>
-							<td>{{item.transaction_time}}</td>
-							<td>{{item.ritasi}}</td>
+							<td class="text-center">{{item.transaction_time}}</td>
+							<td class="text-center">{{item.ritasi}}</td>
 							<td>
 								<i ng-if="item.status == 'OPEN'" style="cursor: pointer" class="fa fa-check" ng-click="$ctrl.markAsArrived(item)"></i>
 							</td>
