--- a/views/components/monitor.html
+++ b/views/components/monitor.html
@@ -7,18 +7,20 @@
 	<div class="box box-info">
 		<div class="box-body">
 			<div class="row">
-				<div class="col-lg-4 col-xs-12">
+				<div class="col-lg-4 hidden-md hidden-sm hidden-xs">
 					<h4 class="text-center">
 						<span>{{$ctrl.data.section.one|date:"dd.MM.yyyy"}}</span>
 						<i class="fa fa-arrow-left" title="Previous Day" style="float:left; cursor:pointer;" ng-click="$ctrl.prevDay()"></i>
 					</h4>
 				</div>
-				<div class="col-lg-4 col-xs-12">
+				<div class="col-lg-4 col-md-12">
 					<h4 class="text-center">
 						<span>{{$ctrl.data.section.two|date:"dd.MM.yyyy"}}</span>
+						<i class="fa fa-arrow-left hidden-lg" title="Previous Day" style="float:left; cursor:pointer;" ng-click="$ctrl.prevDay()"></i>
+						<i class="fa fa-arrow-right hidden-lg" title="Next Day" style="float:right;cursor:pointer;" ng-click="$ctrl.nextDay()"></i>
 					</h4>
 				</div>
-				<div class="col-lg-4 col-xs-12">
+				<div class="col-lg-4 hidden-md hidden-sm hidden-xs">
 					<h4 class="text-center">
 						<span>{{$ctrl.data.section.three|date:"dd.MM.yyyy"}}</span>
 						<i class="fa fa-arrow-right" title="Next Day" style="float:right;cursor:pointer;" ng-click="$ctrl.nextDay()"></i>
@@ -26,7 +28,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-4 col-xs-12">
+				<div class="col-lg-4 hidden-md hidden-sm hidden-xs">
 					<table class="table table-bordered">
 						<tr ng-repeat="item in $ctrl.data.items.one" class="{{$ctrl.getBackground(item.status)}}">
 							<td>{{$index+1}}</td>
@@ -44,7 +46,7 @@
 						</tr>
 					</table>
 				</div>
-				<div class="col-lg-4 col-xs-12">
+				<div class="col-lg-4 col-md-12">
 					<table class="table table-bordered">
 						<tr ng-repeat="item in $ctrl.data.items.two" class="{{$ctrl.getBackground(item.status)}}">
 							<td>{{$index+1}}</td>
@@ -62,7 +64,7 @@
 						</tr>
 					</table>
 				</div>
-				<div class="col-lg-4 col-xs-12">
+				<div class="col-lg-4 hidden-md hidden-sm hidden-xs">
 					<table class="table table-bordered">
 						<tr ng-repeat="item in $ctrl.data.items.three" class="{{$ctrl.getBackground(item.status)}}">
 							<td>{{$index+1}}</td>
